fix(input): remove overflow-x causing drop on iOS
Closes #2539

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -25,7 +25,6 @@ md-input-container {
   position: relative;
   flex-direction: column;
 
-  overflow-x: hidden;
   padding: $input-container-padding;
   padding-bottom: $input-container-padding + $input-error-height;
 
